ensure all bugs are visible fixes bug 807004

--- a/crashstats/crashstats/static/crashstats/css/screen.less
+++ b/crashstats/crashstats/static/crashstats/css/screen.less
@@ -1297,8 +1297,10 @@ th.bugzilla_numbers {
         list-style-type: none;
     }
 }
-#bugzilla h2 {
-    margin-top: 1em;
+#bugzilla {
+    h2 {
+        margin-top: 1em;
+    }
     .bug_ids_expanded_list {
         position: inherit;
         display: block;
